# alpenguard-security-framework

./: .dockerignore  .env.example  .gitignore  .windsurfrules  ARCHITECTURE.md  AlpenGuard.toml  Anchor.toml  BRANCH_PROTECTION.md  CHANGELOG.md  CONTRIBUTING.md  Cargo.toml  DEPLOY_CLOUD_RUN.md  DEPLOY_R2.md  PRODUCTION_DEPLOYMENT.md  README.md  ROADMAP.md  SECURITY.md  SECURITY_AUDIT_REPORT.md  package-lock.json  package.json
.github/: CODEOWNERS  dependabot.yml
.github/workflows/: console-build.yml  oracle-tests.yml
.well-known/: security.txt
apps/console/: Dockerfile  index.html  nginx.conf  package.json
apps/console/src/: styles.css
apps/console/src/ui/: App.tsx
apps/vscode-extension/: .vscodeignore  LICENSE  README.md  package.json  tsconfig.json
apps/vscode-extension/src/: extension.ts
programs/alpenguard/: Cargo.toml
programs/alpenguard/src/: error.rs  lib.rs  state.rs
programs/alpenguard/src/instructions/: initialize_kernel.rs  mod.rs  record_trace.rs
programs/micropayments/: Cargo.toml
programs/micropayments/src/: lib.rs
programs/micropayments/tests/: micropayments_tests.rs
services/oracle/: Cargo.toml  Dockerfile  openapi.yaml
services/oracle/src/: kms.rs  main.rs
services/oracle/tests/: integration_tests.rs  kms_tests.rs
