[workspace]
resolver = "2"
members = [
  "programs/alpenguard",
  "services/oracle",
]

[workspace.package]
edition = "2021"
license = "MIT"

[workspace.dependencies]
anchor-lang = "0.30.0"
anchor-spl = "0.30.0"
thiserror = "1.0"
anyhow = "1.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
tokio = { version = "1", features = ["full"] }
axum = "0.7"
tower-http = { version = "0.5", features = ["cors", "trace"] }
aes-gcm = "0.10"
base64 = "0.22"
sha2 = "0.10"
uuid = { version = "1", features = ["v4", "serde"] }
chrono = { version = "0.4", features = ["serde"] }
