[package]
name = "alpenguard-micropayments"
version = "0.1.0"
description = "Token-2022 micropayment program for AlpenGuard x402 protocol"
edition = "2021"

[lib]
crate-type = ["cdylib", "lib"]
name = "alpenguard_micropayments"

[features]
no-entrypoint = []
no-idl = []
no-log-ix-name = []
cpi = ["no-entrypoint"]
default = []

[dependencies]
anchor-lang = "0.30.1"
anchor-spl = "0.30.1"
spl-token-2022 = "6.0.0"
