[package]
name = "alpenguard-oracle"
version = "0.1.0"
edition.workspace = true
license.workspace = true

[dependencies]
anyhow.workspace = true
axum.workspace = true
tower-http.workspace = true
tokio.workspace = true
serde.workspace = true
serde_json.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true
uuid.workspace = true
chrono.workspace = true

jsonwebtoken = "9.3.0"
reqwest = { version = "0.12.12", default-features = false, features = ["json", "rustls-tls"] }
once_cell = "1.19.0"
tower-governor = "0.6.0"
getrandom = "0.2.15"
urlencoding = "2.1.3"
aws-config = "1.1.9"
aws-sdk-s3 = "1.17.0"
aws-smithy-types = "1.1.9"
aws-credential-types = "1.1.9"
aws-types = "1.1.9"

# Encryption-at-rest placeholder (env-provided key)
aes-gcm.workspace = true
base64.workspace = true
sha2.workspace = true
